Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,7 +16,7 @@ title: Le Wagon - Middleman
     <div class="banner-content">
       <h1>Le Wagon Berlin</h1>
       <p>Learn to code with us in Berlin</p>
-      <a class="btn btn-primary btn-lg">Start now</a>
+      <a class="btn btn-danger btn-lg">Start now</a>
     </div>
   </div>
 
@@ -38,10 +38,10 @@ title: Le Wagon - Middleman
     </div>
     <div class="col-xs-12 col-sm-4">
       <!-- insert <div class="card"> -->
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/lyon');">
         <div class="card-category">Popular</div>
         <div class="card-description">
-          <h2>Le Wagon Shanghai</h2>
+          <h2>Le Wagon Lyon</h2>
           <p>Very cool city, the best</p>
         </div>
         <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
@@ -50,10 +50,10 @@ title: Le Wagon - Middleman
     </div>
     <div class="col-xs-12 col-sm-4">
       <!-- insert <div class="card"> -->
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/rio');">
         <div class="card-category">Popular</div>
         <div class="card-description">
-          <h2>Le Wagon Shanghai</h2>
+          <h2>Le Wagon Rio</h2>
           <p>Very cool city, the best</p>
         </div>
         <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
