--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
+$red: #C62E65;
+$blue: #0C6291;
+$yellow: #FFA630;
 $orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
-$light-gray: #F4F4F4;
+$green: #2A9D8F;
+$gray: #353531;
+$light-gray: #FBF5F3;
